--- a/task1-box-flex.html
+++ b/task1-box-flex.html
@@ -16,12 +16,8 @@
             height: 90vh;
             margin: 15px;
             border-radius: 8px;
-        }
-
-        .boxes {
             display: grid;
             grid-template-columns: 1fr 3fr;
-            height: 90vh;
         }
 
         .box {
@@ -41,7 +37,7 @@
 
 
         @media screen and (max-width: 576px) {
-            .boxes {
+            .box-container {
                 grid-template-columns: 1fr;
                 grid-template-rows: 1fr 3fr;
             }
@@ -56,10 +52,8 @@
 
 <body>
     <div class="box-container">
-        <div class="boxes">
-            <div class="box">Left</div>
-            <div class="box box-right">Right</div>
-        </div>
+        <div class="box">Left</div>
+        <div class="box box-right">Right</div>
     </div>
 </body>
 
